# icalfilter

./: Cargo.toml
.github/workflows/: build.yml
src/: event.rs  main.rs  rules.rs
