[package]
name = "icalfilter"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ical = { git = "https://github.com/vtavernier/ical-rs.git", branch = "dev" }
argh = "0.1.3"
anyhow = "1.0.32"
thiserror = "1.0.20"
regex = "1.3.9"
