[package]
name = "icalfilter"
version = "0.2.1"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ical = { git = "https://github.com/vtavernier/ical-rs.git", branch = "dev" }
anyhow = "1.0.32"
argh = "0.1.3"
chrono = "0.4"
csv = "1.1"
itertools = "0.9.0"
regex = "1.3.9"
thiserror = "1.0.20"
